src/styles/Home.css
h1 {
    margin-left: 70px;
    margin-top: 40px;
}

.main-box {
    width: auto;
    height: 300px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url('../components/images/Banner Afonso.png');
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

.logo-main-box {
    width: auto;
    height: 100%;
    opacity: 0;
    transition: opacity 1s ease;
}

.logo-main-box.show {
    opacity: 1;
}

ul {
    list-style: none;
    column-count: 3;
    padding: 10px;
}

li {
    margin-bottom: 5px;
}

.about-container {
    margin-left: 40px;
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

.side-text {
    flex: 3;
    padding: 30px;
}

.professional-image-box {
    margin-right: 40px;
    margin-bottom: 20px;
    flex: 2;
    display: flex;
    justify-content: center;
}

.professional-image {
    height: auto;
    max-width: 450px;
    width: 100%;
}

.has-bar {
    position: relative;
    margin-bottom: 5px;
}

.has-bar::after {
    content: '';
    position: absolute;
    bottom: 0;
    left: 0;
    width: 80%;
    height: 2px;
    background-color: #766b65;
}

.btn-contato{
    margin-bottom: 20px;
    display: flex;
    justify-content: center;
    align-items: flex-start;
}

@media screen and (max-width: 960px) {
    .about-container {
        flex-direction: column;
        align-items: center; 
    }

    .side-text {
        order: 1;
    }

    .professional-image-box {
        order: 2;
        margin-bottom: 20px;
    }

    .professional-image {
        max-width: 85%;
        height: auto;
    }
}

